--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "redbox-react": "^1.3.0",
     "rucksack-css": "^0.9.1",
     "style-loader": "^0.13.1",
+    "stylelint-config-lost": "0.0.3",
+    "stylelint-config-standard": "^16.0.0",
     "webpack": "^1.13.2"
   }
 }
