Changed the site title and description

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-siteTitle="Alchemy"
-siteDescription="A Gatsby starter with PostCSS powers"
+siteTitle="Sketchapp Club"
+siteDescription="A directory of Sketch app resources"
 
-linkPrefix = "/gatsby-starter-alchemy"
+linkPrefix = "/gatsby-sketchclub"
